# frl_donkey

./: .gitignore  README.md  config.ini  frl_client.py  frl_server.py  model.py  plot.py  plot_figure.py  pyproject.toml  rl_train.py  run.py
common/: autoencoder.py  callbacks.py  config.py  model.py  plot.py  wrappers.py
common/autoencoder_model/: ae-32_1714903016_best.pkl
hyperparameter_tunning/: donkeycar_optuna.py
