[tool.poetry]
name = "frl-donkey"
version = "0.1.0"
description = ""
authors = ["Arthurchen <arthurchen@johnsonfitness.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.0"
flwr = "^1.6.0"
gym-donkeycar = {git = "https://github.com/tawnkramer/gym-donkeycar"}
stable-baselines3 = {extras = ["extra"], version = "^2.2.1"}
sb3-contrib = "^2.2.1"
flwr-nightly = "^1.8.0.dev20240315"
rl-zoo3 = "^2.3.0"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
