[tool.poetry]
name = "frl-donkey"
version = "0.1.0"
description = ""
authors = ["Arthurchen <arthurchen@johnsonfitness.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flwr = "^1.6.0"
stable-baselines3 = {extras = ["extra"], version = "^2.2.1"}
sb3-contrib = "^2.2.1"
flwr-nightly = "^1.8.0.dev20240315"
gym-donkeycar = {git = "https://github.com/arthur-chen0/gym-donkeycar.git"}
optuna = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
